Nye endringer og kundeanmeldelser
Animasjoner er blitt lagt til og kundeanmeldelser har blitt laget.

--- a/egendefinert.html
+++ b/egendefinert.html
@@ -55,7 +55,7 @@
                 <div class="rpg-enemy">
                     <p id="enemy-health-p">80/80 HP</p>
                     <p>Monster!</p>
-                    <img src="images/other/monster.png" alt="Fiske monster"> <!-- jeg er, som de kule kidsa sier, en kunster -->
+                    <img src="images/other/monster.png" alt="Fiske monster" id="imgEnemy"> <!-- jeg er, som de kule kidsa sier, en kunster -->
                     <p id="log-p"> </p>
                 </div>
                 
