fresha opp stylesheet

--- a/universellutforming.html
+++ b/universellutforming.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="main-body">
-            <section>
+            <section class="UU-section">
                 <h2>Tilfeldige fakta om Universal Utforming!</h2>
                 <p id="UU-fakta-output">Trykk knappen for en kul fakta om Unversal Utforming.</p>
                 <button onclick="UUfacts()">Ny fakta!</button>
